--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <phenol.version>1.6.0</phenol.version>
+        <phenol.version>1.6.2-SNAPSHOT</phenol.version>
         <guava.version>27.0-jre</guava.version>
         <junit.version>5.6.1</junit.version>
         <junit.jupiter.version>5.7.0-M1</junit.jupiter.version>
@@ -113,12 +113,10 @@
             </exclusions>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
-            <groupId>com.beust</groupId>
-            <artifactId>jcommander</artifactId>
-            <version>1.78</version>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.5.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
